<resources>
    <string name="app_name">submission3dicoding</string>
    <string name="title_home">FILM</string>
    <string name="title_dashboard">ACARA TV</string>
    <string name="nama_movie">Nama Movie</string>
    <string name="language">Pengaturan Bahasa</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="judule">judul</string>
    <string name="detail">Detail</string>
    <string name="date">Tanggal</string>
    <string name="judul_film">Film Katalog</string>
    <string name="tv_show">Acara Tv Katalog</string>
    <string name="detail_film">Detail Film</string>
    <string name="detail_tv">Detail Acara Tv</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_film">Favorite Film</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="appwidget_text">MOVIE KATALOG</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">EMPTY DATA</string>
    <string name="was_just_released">Telah Rilis Hari ini !!!</string>
    <string name="set_repeating_started">Repeating Alarm :</string>
    <string name="set_repeating_cancelled">Repeating Alarm di batalkan</string>
    <string name="daily_reminder_title_notification">Pengingat Harian :</string>
    <string name="daily_reminder">Pengingat Harian</string>
    <string name="daily_reminder_sub">Pengingat Harian</string>
    <string name="release_reminder">Pengingat Release</string>
    <string name="release_reminder_sub">Pengingat Release</string>
    <string name="checkyuk">Hai guys ! Check yuk Ada Yang Baru</string>
    <string name="reminder_settings">Pengaturan Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>
