<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_vertical"
            android:paddingBottom="@dimen/activity_vertical"
            android:paddingRight="@dimen/activity_horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="4dp"
            app:cardMaxElevation="5dp"
            android:paddingLeft="@dimen/activity_horizontal"

            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="160dp"
                    android:layout_height="170dp"
                    android:id="@+id/img_view"
                    android:scaleType="fitStart"
                    style="@style/Base.CardView"

            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_view"
                    android:layout_toRightOf="@+id/img_view"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama_movie"
                        android:textStyle="bold"
                        android:text="@string/nama_movie"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tgl"
                        android:text="@string/date"
                        android:textSize="12dp"/>

                <TextView
                        android:id="@+id/deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="110"
                        android:ellipsize="end"
                        android:paddingTop="5dp"
                        android:text="@string/deskripsi"/>

                <Button
                        android:layout_marginTop="7dp"
                        android:id="@+id/detail"
                        android:layout_width="100dp"
                        android:layout_height="27dp"
                        android:background="@color/colorAccent"

                        android:text="@string/detail"
                        android:textAlignment="center"
                        android:textColor="#fff"/>

            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>