<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DetailActivity"
>
<android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
    <ProgressBar

            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar1"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="gone"/>
    <ImageView android:layout_width="719dp"
               android:layout_height="286dp"
               android:src="@drawable/ic_movie_black_24dp"
               android:layout_marginEnd="131dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="130dp"
               app:layout_constraintTop_toTopOf="parent"
               android:id="@+id/img_d" app:layout_constraintHorizontal_bias="0.498"
               android:scaleType="fitXY"
               android:layout_marginBottom="12dp"
               app:layout_constraintBottom_toTopOf="@+id/judul"/>

    <TextView
            android:id="@+id/judul"
            android:layout_width="217dp"
            android:layout_height="24dp"
            android:text="@string/judule"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/img_d"
            app:layout_constraintStart_toStartOf="@+id/img_d"
            app:layout_constraintTop_toBottomOf="@+id/img_d"
            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.492"/>

    <TextView
            android:id="@+id/desc"
            android:layout_width="317dp"
            android:layout_height="159dp"
            android:text="@string/deskripsi"
            android:textAlignment="textStart"
            android:textSize="15dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
            android:id="@+id/tangggal"
            android:textAlignment="center"
            android:layout_width="190dp"
            android:layout_height="43dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/judul"
            app:layout_constraintStart_toStartOf="@+id/judul"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/desc"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/judul"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageButton
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_favorite_black_24dp"
            android:id="@+id/img_fav"
            app:layout_constraintStart_toEndOf="@+id/judul" android:layout_marginStart="8dp"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>